--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,14 +49,22 @@ flutter:
   # Logo & Splash
     - assets/dev/
 
-  # Images & Icons
-    - assets/dev/
-
-  # Animations
-    - assets/animations/
-
   # Audios
     - assets/audio/
+
+  # Animations
+    - assets/animations/    
+
+  # Images & Icons
+    - assets/images/
+    - assets/images/today/
+    - assets/images/clock/
+    - assets/images/calendar/
+
+  # fonts
+    - assets/fonts/
+    - assets/fonts/poppins/
+    - assets/fonts/roboto/
 
   # Locales
     - assets/locales/
@@ -66,17 +74,22 @@ flutter:
 
  
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/Poppins-Italic.ttf
+          style: italic
+        - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
+          weight: 900
+
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/roboto/Roboto-Regular.ttf
+        - asset: assets/fonts/roboto/Roboto-Italic.ttf
+          style: italic
+        - asset: assets/fonts/roboto/Roboto-SemiBold.ttf
+          weight: 900
+  
   
 
