--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   package_info_plus: ^9.0.0
   in_app_review: ^2.0.11
   url_launcher: ^6.3.2
+  flutter_localizations:
+    sdk: flutter
 
 
 
