--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_localizations:
     sdk: flutter
+  firebase_core: ^4.4.0
+  flutter_slidable: ^4.0.0
+  flutter_local_notifications: ^19.0.0
+  timezone: ^0.10.0
+  flutter_timezone: ^4.1.0
 
 
 
@@ -132,4 +137,3 @@ flutter:
 
   
   
-
